(lang dune 2.0)
(name nemesis)
(using menhir 2.0)
(generate_opam_files true)
(source (github ekoeppen/nemesis))
(license ISC)
(authors "Eckhart Koeppen")
(maintainers "eck@40hz.org")

(package
 (name nemesis)
 (synopsis "Simplfied Forth compiler")
 (depends
   (nice_parser :build)
   (core :build)
   (str :build)
   (base :build)
   (cmdliner :build)
   (logs :build)
   (fmt.tty :build)
   (fmt.cli :build)
   (logs.fmt :build)
   (logs.cli :build)
   (hex :build)
   (dune (>= 2.0))))
